# at32-workspace

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: docker-full-build-ubuntu.yml
app/inc/: at32f415_board.h  at32f415_conf.h  main.h
app/src/: at32f415_board.c  at32f415_clock.c
apps/src/: main.c
docker/: build.sh  run.sh  toolchain.dockerfile
drivers/cmsis/inc/: at32f415.h
tools/: download.pl  download.sh  openocd.cfg
